--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ readme = "README.md"
 packages = [{include = "coursework_3"}]
 
 [tool.poetry.dependencies]
-python = "3.10.7"
+python = "^3.10.7"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3.1"
 
 [build-system]
 requires = ["poetry-core"]
